Fixed spacing

--- a/style.css
+++ b/style.css
@@ -199,8 +199,8 @@ nav {
 }
 
 .main_heading {
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 800;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
     color: #EDE4DF;
     font-size: 4em;
     padding: 40px 0;
@@ -227,6 +227,11 @@ nav {
 }
 
 .info_page {
+    display: flex;
+    justify-content: center;
+}
+
+.info_page_block {
     font-family: 'PT Sans', sans-serif;
     font-weight: 100;
     display: flex;
@@ -237,10 +242,12 @@ nav {
 }
 
 .info_page p {
+    font-size: .8em;
     color: white;
     max-width: 30%;
-    letter-spacing: 1px;
-    text-align: center;
+    letter-spacing: 0.5px;
+    text-align: left;
+    line-height: 1.3;
 }
 
 .info_page .button_touch {
@@ -249,7 +256,7 @@ nav {
     color: #ede4df;
     border: 5px solid #D87001;
     text-align: center;
-    padding: 10px 10px;
+    padding: 6px 10px;
     border-radius: 0 50px 50px 0;
     background-color: #D87001;
 }
@@ -271,7 +278,8 @@ nav {
     }
 
     .navbar {
-        margin: 80px 0;
+        margin-bottom: 80px;
+        margin-top: 50px;
     }
 
     .main_links a:nth-of-type(2) {
@@ -290,7 +298,7 @@ nav {
     }
 
     .main_heading {
-        font-size: 3.5em;
+        font-size: 4em;
     }
 
     .main_img img {
@@ -299,9 +307,31 @@ nav {
         object-fit: cover;
     }
 
+    .info_page_block {
+        flex-direction: column;
+        width: 100%;
+        max-width: 80%;
+    }
+
+    .info_page p {
+        font-size: 0.8em;
+        max-width: 100%;
+        padding-bottom: 20px;
+        /* color: white;
+        max-width: 30%;
+        letter-spacing: 0.5px;
+        text-align: center;
+        line-height: 1.3; */
+    }
+
+    .info_page .button_touch {
+        border-radius: 50px;
+        background-color: #D87001;
+    }
+
 }
 
-@media (max-width:535px) {
+@media (max-width:600px) {
     .navbar {
         margin-bottom: 120px;
     }
@@ -322,7 +352,7 @@ nav {
     }
 
     .main_heading {
-        font-size: 2.2em;
+        font-size: 2.8em;
     }
 
     .main_img img {
